# rust-estimate-pi

./: CHECKLIST.md  Cargo.toml  README.md
arguments/: main.rs
lib/: arguments.rs  lib.rs  parallel.rs  sample.rs  simple.rs  time.rs
parallel/: main.rs
simple/: main.rs
trait/: main.rs
